src/core/Claroline/PluginBundle/Tests/stub/plugin/Valid/Minimal/ValidMinimal.php
<?php

namespace Valid\Minimal;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class ValidMinimal extends ClarolinePlugin
{
    
}