src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey1/InvalidUnexpectedTranslationKey1.php
<?php

namespace Invalid\UnexpectedTranslationKey1;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey1 extends ClarolinePlugin
{
    public function getNameTranslationKey()
    {
        return array();
    }
}